reload colors on system boot

--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -4,6 +4,7 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprsunset
 exec-once = kanshi reload
 exec-once = $HOME/.config/hypr/scripts/daemons/hypridle
+exec-once = $HOME/.config/hypr/scripts/daemons/swaync
 exec-once = kbuildsycoca6 # Dolphin file association
 exec-once = mpDris2 # mpd helper for playerctl
 
@@ -13,6 +14,7 @@ exec-once = $HOME/.local/bin/public/pass/git-watcher-push
 exec-once = $HOME/.local/bin/public/color-mode/dark-mode skip-notification
 exec-once = $HOME/.local/bin/public/battery-status
 exec-once = $HOME/.config/hypr/scripts/daemons/einkify
+exec-once = $HOME/.config/hypr/scripts/daemons/swaync
 
 # exec-once = libinput-gestures
 
