lost of bug fixes, add browser bookmarks sync

--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -29,6 +29,7 @@ exec-once = pywalfox start
 
 # Clipboard daemon
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec = sh -c 'while true; do $HOME/.local/bin/qutebrowser-sync --remote /your/remote/path; sleep 300; done'
 
 # Waybar
 exec-once = $HOME/.config/waybar/live-reload
