--- a/home/.config/qutebrowser/autoconfig.yml
+++ b/home/.config/qutebrowser/autoconfig.yml
@@ -9,6 +9,7 @@ settings:
   content.javascript.clipboard:
     https://chatgpt.com: access-paste
     https://claude.ai: access-paste
+    https://cloud.disroot.org: access-paste
     https://github.com: access-paste
     https://wiki.hypr.land: access-paste
   content.notifications.enabled:
