lots of things, eink implemented, add snitch

--- a/home/.config/hypr/hypridle/hypridle-homepc.conf
+++ b/home/.config/hypr/hypridle/hypridle-homepc.conf
@@ -3,7 +3,13 @@ general {
 }
 
 listener {
-  timeout = 500
+  timeout = 100
+  on-timeout =  hyprlock
+  on-resume = hyprlock
+}
+
+listener {
+  timeout = 2000 # ~30 mins
   on-timeout = hyprctl dispatch dpms off
   on-resume = hyprctl dispatch dpms on
 }
