--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -12,6 +12,10 @@ source = ~/.config/hypr/modules/monitors.conf
 source = ~/.config/hypr/modules/autostart.conf
 
 env = XDG_CURRENT_DESKTOP,Hyprland
+env = PATH,$HOME/.local/bin:$HOME/.local/bin/private:$HOME/.local/bin/public:$PATH
+env = PAGER,nvimpager
+env = TERMINAL,kitty
+env = BROWSER,qutebrowser
 
 general { # https://wiki.hyprland.org/Configuring/Variables/#general
   gaps_in = 2
@@ -155,6 +159,10 @@ misc {
   vfr = true
   # vrr = 2
   vrr = 0
+}
+
+debug {
+  disable_logs = false
 }
 
 opengl {
