--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -1,43 +1,57 @@
-# Process authentication
-# exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
+# System
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = hyprsunset
-exec-once = kanshi reload
-exec-once = $HOME/.config/hypr/scripts/daemons/hypridle
-exec-once = $HOME/.config/hypr/scripts/daemons/swaync
-exec-once = kbuildsycoca6 # Dolphin file association
-exec-once = mpDris2 # mpd helper for playerctl
-
-# sync password on change (cron job pulls every 5 mins)
-exec-once = $HOME/.local/bin/public/pass/git-watcher-push
-
-exec-once = $HOME/.local/bin/public/color-mode/dark-mode skip-notification
-exec-once = $HOME/.local/bin/public/battery-status
-exec-once = $HOME/.config/hypr/scripts/daemons/einkify
-exec-once = $HOME/.config/hypr/scripts/daemons/swaync
-
-# exec-once = libinput-gestures
-
-exec = $HOME/.config/hypr/scripts/load-host-config
-exec = $HOME/.config/hypr/scripts/set-thinkpad-settings
-exec = $HOME/.config/hypr/scripts/set-homepc-settings
-
-# Walppaper and colors
-exec-once = pkill -x swww-daemon; swww-daemon & disown
-exec-once = $HOME/.local/bin/public/wallpaper/set-on-boot
-exec-once = pywalfox start
+# Host specific
+exec = snitch hyprctl keyword source ~/.config/hypr/modules/hosts/$(hostname).conf
+exec = snitch $HOME/.config/hypr/scripts/set-thinkpad-settings
+exec = snitch $HOME/.config/hypr/scripts/set-homepc-settings
 
 # Clipboard daemon
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec = sh -c 'while true; do $HOME/.local/bin/qutebrowser-sync --remote /your/remote/path; sleep 300; done'
+exec-once = snitch wl-paste --watch cliphist store
+
+# Monitors
+exec-once = snitch kanshi reload
+
+# Qutebrowser
+exec-once = snitch sh -c 'while true; do $HOME/.local/bin/qutebrowser-sync --remote /your/remote/path; sleep 300; done'
+
+# Walppaper and colors
+exec-once = snitch $HOME/.local/bin/public/wallpaper/set-on-boot
+
+# Power Monitor
+exec-once = snitch $HOME/.local/bin/public/sound/audio-profile-power-monitor
+
+# Blue Light blocker
+exec-once = snitch hyprsunset
+
+# Lock
+exec-once = snitch $HOME/.config/hypr/scripts/daemons/hypridle
+
+# Dolphin
+exec-once = snitch kbuildsycoca6
+
+# Notifications
+exec-once = snitch $HOME/.config/hypr/scripts/daemons/swaync
+
+# MPD
+exec-once = snitch mpDris2
+
+# Password sync
+exec-once = snitch $HOME/.local/bin/public/pass/git-watcher-push
+
+exec-once = snitch $HOME/.local/bin/public/color-mode/dark-mode skip-notification
+exec-once = snitch $HOME/.local/bin/public/battery-status
+exec-once = snitch $HOME/.config/hypr/scripts/daemons/einkify
+
+# TODO: exec-once = libinput-gestures
 
 # Waybar
-exec-once = $HOME/.config/waybar/live-reload
+exec-once = pkill waybar; snitch waybar -c "$HOME/.config/waybar/hosts/$(hostname).jsonc"
 
-# exec-once = [workspace 1 silent] uwsm app -- firefox -P default --name  firefox-main
 exec-once = [workspace 1 silent] uwsm app -- qutebrowser
-exec-once = [workspace 2 silent] uwsm app -- kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
+exec-once = [workspace 2 silent] uwsm app -- $HOME/.local/bin/public/applications/kitty-eink --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] uwsm app -- obsidian
 exec-once = [workspace 4 silent] kitty zsh -lic "rmpc; exec zsh -i"
 
-# exec = [workspace 5 silent] $HOME/.local/bin/public/hyprland/autostart/music
+# consider to remove
+# exec-once = pywalfox start # remove if I do not use firefox 3 weeks from now
+# exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
