--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -5,14 +5,14 @@ bind = SUPER, Return,   exec, $HOME/.local/bin/public/applications/kitty-eink
 bind = SUPER, S,        exec, hyprshot -zm region -o $HOME/Pictures/screenshots
 bind = SUPER, E,        exec, kitty zsh -lic "y; exec zsh -i"
 bind = SUPER, D,        exec, $HOME/.local/bin/public/menu/launch-kitty applications
-bind = SUPER, P,        exec, $HOME/.local/bin/public/menu/launch-kitty
+bind = SUPER, P,        exec, snitch $HOME/.local/bin/public/menu/launch-kitty
 bind = SUPER, O,        exec, qutebrowser
 
 # System
-bind = SUPER SHIFT, I,     exec, $HOME/.local/bin/public/menu/launch-kitty wallpaper
+bind = SUPER SHIFT, I,     exec, snitch $HOME/.local/bin/public/menu/launch-kitty wallpaper
 bind = SUPER, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
 # Example keybind in hyprland.conf
-bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
+# bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
 
 bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth-connect-xm6
 bindl = SUPER SHIFT, b,            exec, $HOME/.local/bin/public/hardware/set-keyboard-backlight
@@ -54,12 +54,31 @@ bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
+bind = SUPER SHIFT, A, movetoworkspace, special:magic
+bind = SUPER SHIFT, W, movetoworkspace, special:watch
+bind = SUPER SHIFT, C, movetoworkspace, special:controls
+
+bind = SUPER_CTRL_SHIFT, 1, movecurrentworkspacetomonitor, +1
+bind = SUPER_CTRL_SHIFT, 2, movecurrentworkspacetomonitor, -1
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
 
 # Special workspace
 bind = SUPER, A, togglespecialworkspace, magic
+bind = SUPER, W, togglespecialworkspace, watch
+bind = SUPER, C, togglespecialworkspace, controls
 
 # Navigation
 bind = SUPER, grave, workspace, previous
@@ -101,18 +120,6 @@ binde = SHIFT ALT, L, moveactive, 100 0
 binde = SHIFT ALT, K, moveactive, 0 -100
 binde = SHIFT ALT, J, moveactive, 0 100
 binde = SHIFT ALT, C, centerwindow
-
-bind = SUPER SHIFT, 1, movetoworkspace, 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
-bind = SUPER SHIFT, A, movetoworkspace, special:magic
 
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
