--- a/home/.config/hypr/modules/hosts/homepc.conf
+++ b/home/.config/hypr/modules/hosts/homepc.conf
@@ -1,3 +1,8 @@
+input {
+  kb_model = "apple"
+  kb_options = "ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle"
+}
+
 workspace = 1, monitor:desc:DSC Paperlike13K 0x00003400, persistent:true
 workspace = 2, monitor:desc:DSC Paperlike13K 0x00003400, persistent:true
 workspace = 3, monitor:desc:DSC Paperlike13K 0x00003400, persistent:true
@@ -9,9 +14,8 @@ workspace = 8, monitor:DP-1, persistent:true
 workspace = 9, monitor:DP-1, persistent:true
 workspace = 10, monitor:DP-1, persistent:true
 
+monitor = HDMI-A-1, 3200x2400@37, 0x720, 2.5
+monitor = DP-1, 3840x2160@60, 1280x0, 1.5, transform, 1
+
 # exec = for i in {1..3}; do hyprctl dispatch moveworkspacetomonitor $i HDMI-A-1; done
 # exec = for i in {4..10}; do hyprctl dispatch moveworkspacetomonitor $i DP-1; done
-
-# windowrulev2 = bordercolor rgb(808080) rgb(F5F5F5), workspace:1-5
-# windowrulev2 = noanim, workspace:1-5
-# windowrulev2 = noblur, workspace:1-5
