--- a/home/.config/hypr/modules/hosts/thinkpad.conf
+++ b/home/.config/hypr/modules/hosts/thinkpad.conf
@@ -1,3 +1,8 @@
+input {
+  kb_model = "thinkpad"
+  kb_options = "ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle,ctrl:nocaps,altwin:swap_lalt_lwin"
+}
+
 workspace = 1, monitor:HDMI-A-1, persistent:true
 workspace = 2, monitor:HDMI-A-1, persistent:true
 workspace = 3, monitor:HDMI-A-1, persistent:true
