--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -115,7 +115,6 @@ windowrulev2 = noshadow,        class:^(google-chrome)$, title:(^X.*p$)
 # windowrulev2 = opacity 1.0 override 1.0 override, class:^(kitty)$
 # windowrulev2 = noblur, class:^(kitty)$
 
-
 windowrulev2 = idleinhibit focus, class:^(mpv)$
 windowrulev2 = idleinhibit focus, class:^(zoom)$
 windowrulev2 = idleinhibit focus, title:^.*Meet.*$
@@ -142,3 +141,12 @@ windowrulev2 = tile, class:(.*kitty.*)
 windowrulev2 = tile, class:(.*main.*) # kitty
 windowrulev2 = tile, class:.*(im.py).*
 windowrulev2 = tile, class:(.*qutebrowser.*)
+
+# Special workspaces
+
+windowrulev2 = workspace special:watch, class:^(mpv|vlc)$
+windowrulev2 = fullscreen, class:^(mpv|vlc)$
+
+windowrulev2 = workspace special:controls, class:^(virt-manager|qemu|QEMU)$
+windowrulev2 = workspace special:controls, title:^(.*[Ww]indows.?10.*)$
+windowrulev2 = workspace special:controls, class:^(python3?|Python)
