add host settings empty file

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -10,12 +10,14 @@ source = ~/.config/hypr/modules/windowrules.conf
 source = ~/.config/hypr/modules/permissions.conf
 source = ~/.config/hypr/modules/monitors.conf
 source = ~/.config/hypr/modules/autostart.conf
+source = ~/.config/hypr/modules/host_settings.conf
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = PATH,$HOME/.local/bin:$HOME/.local/bin/private:$HOME/.local/bin/public:$PATH
 env = PAGER,nvimpager
 env = TERMINAL,kitty
 env = BROWSER,qutebrowser
+# env = GBM_BACKEND, drm-kms
 
 general { # https://wiki.hyprland.org/Configuring/Variables/#general
   gaps_in = 2
