no exec-once options in hypr & split configs

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -1,174 +1,52 @@
-# Wiki  https://wiki.hyprland.org/Configuring/
+# https://wiki.hyprland.org/Configuring/
 
-source = ~/.cache/wal/colors-hyprland-borders.conf
-source = ~/.config/hypr/plugins/darkwindow.conf
+#################################
+# Plugins
+#################################
+
 # source = ~/.config/hypr/plugins/hyprspace.conf
+source = ~/.config/hypr/plugins/darkwindow.conf
 source = ~/.config/hypr/plugins/hyprbars.conf
 
+#################################
+# External
+#################################
+
+source = ~/.cache/wal/colors-hyprland-borders.conf
+
+#################################
+# Configuration
+#################################
 source = ~/.config/hypr/modules/binds.conf
 source = ~/.config/hypr/modules/windowrules.conf
 source = ~/.config/hypr/modules/permissions.conf
 source = ~/.config/hypr/modules/monitors.conf
-source = ~/.config/hypr/modules/autostart.conf
 source = ~/.config/hypr/modules/host_settings.conf
+source = ~/.config/hypr/modules/animations.conf
+source = ~/.config/hypr/modules/decoration.conf
+source = ~/.config/hypr/modules/env.conf
+source = ~/.config/hypr/modules/input.conf
+source = ~/.config/hypr/modules/gaming.conf
 
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = PATH,$HOME/.local/bin:$HOME/.local/bin/private:$HOME/.local/bin/public:$PATH
-env = PAGER,nvimpager
-env = TERMINAL,kitty
-env = BROWSER,qutebrowser
-# env = GBM_BACKEND, drm-kms
+exec-once = ln -sf ~/.config/hypr/modules/hosts/$(hostname).conf ~/.config/hypr/modules/host_settings.conf
+exec-once = $HOME/.config/hypr/modules/autostart.sh
 
-general { # https://wiki.hyprland.org/Configuring/Variables/#general
+general {
   gaps_in = 2
   gaps_out = 15
 
   border_size = 2
 
-  # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-  col.active_border = rgba(03fcfcaa)
-  col.inactive_border = rgba(595959aa)
+  layout = dwindle
 
-  # col.active_border = rgba(0xff${border_active2}) rgba(0xff${border_active1}) 45deg
-  # col.inactive_border = rgba(0xff${border_inactive})
   col.active_border = $border_active1 $border_active2 45deg
-  # col.inactive_border = $border_inactive
   col.inactive_border = rgba(e0e0e099)
 
-  # Set to true enable resizing windows by clicking and dragging on borders and gaps
   resize_on_border = true
-
-  # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-  allow_tearing = false
-
-  layout = dwindle
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
-# hyprctl -j devices | jq '.keyboards[] | {name,xkb_active_layout_name,xkb_layout_names}'
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-input {
-  follow_mouse = 1
-	resolve_binds_by_sym = true
-  # float_switch_override_focus = 0
-
-  kb_layout  = us,ru
-
-  # kb_options = ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle,ctrl:nocaps,altwin:swap_lalt_lwin
-  # kb_options = ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle
-
-  sensitivity = 0
-
-  touchpad {
-    natural_scroll = true
-    tap-to-click = true
-  }
-}
-
-gestures {
-  # gesture = 3, horizontal, workspace
-  # gesture = 3, up, exec, hyprctl dispatch overview:toggle
-  gesture = 3, horizontal, workspace
-  # gesture = 3, up, exec, hyprctl dispatch hyprspace:toggle
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-
-# device {
-#   name = epic-mouse-v1
-#   sensitivity = -0.5
-# }
-
-decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
-  rounding = 1
-  rounding_power = 2
-
-  # Change transparency of focused and unfocused windows
-  active_opacity = 0.95
-  inactive_opacity = 0.8
-
-  dim_inactive = false
-  dim_strength = 0.3
-  dim_special = 0.8
-
-  shadow {
-    enabled = false
-    range = 3
-    render_power = 1
-    color = rgba(1a1a1aee)
-  }
-
-
-  blur {
-    enabled = true
-    size = 10
-    passes = 2
-    ignore_opacity = true
-    new_optimizations = true
-    xray = true
-    special = true
-    popups = true
-  }
-}
-
-animations { # https://wiki.hyprland.org/Configuring/Variables/#animations
-  # enabled = yes, please :)
-  enabled = no
-
-  # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-  bezier = easeOutQuint,0.23,1,0.32,1
-  bezier = easeInOutCubic,0.65,0.05,0.36,1
-  bezier = linear,0,0,1,1
-  bezier = almostLinear,0.5,0.5,0.75,1.0
-  bezier = quick,0.15,0,0.1,1
-
-  animation = global, 1, 10, default
-  animation = border, 1, 5.39, easeOutQuint
-  animation = windows, 1, 4.79, easeOutQuint
-  animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-  animation = windowsOut, 1, 1.49, linear, popin 87%
-  animation = fadeIn, 1, 1.73, almostLinear
-  animation = fadeOut, 1, 1.46, almostLinear
-  animation = fade, 1, 3.03, quick
-  animation = layers, 1, 3.81, easeOutQuint
-  animation = layersIn, 1, 4, easeOutQuint, fade
-  animation = layersOut, 1, 1.5, linear, fade
-  animation = fadeLayersIn, 1, 1.79, almostLinear
-  animation = fadeLayersOut, 1, 1.39, almostLinear
-  animation = workspaces, 1, 1.94, almostLinear, fade
-  animation = workspacesIn, 1, 1.21, almostLinear, fade
-  animation = workspacesOut, 1, 1.94, almostLinear, fade
-}
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-  pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-  preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-  new_status = master
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-  # attempt to fix window moving
-  mouse_move_enables_dpms = false
-  disable_hyprland_logo = true
-  focus_on_activate = true
-  vfr = true
-  # vrr = 2
-  vrr = 0
 }
 
 debug {
   disable_logs = false
-}
-
-opengl {
-#  nvidia_anti_flicker = true
 }
 
 xwayland {
@@ -177,5 +55,21 @@ xwayland {
   use_nearest_neighbor = false
 }
 
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
+# https://wiki.hyprland.org/Configuring/Dwindle-Layout/
+dwindle {
+  pseudotile = true
+  preserve_split = true
+}
+
+master {
+  new_status = master
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc {
+  mouse_move_enables_dpms = false
+  disable_hyprland_logo = true
+  focus_on_activate = true
+  vfr = true
+  vrr = 0
+}
