--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -1,28 +1,28 @@
 # https://wiki.hyprland.org/Configuring/Binds
 
 # Applications
-bind = SUPER, Return,   exec, $HOME/.local/bin/public/applications/kitty-eink
-bind = SUPER, S,        exec, hyprshot -zm region -o $HOME/Pictures/screenshots
-bind = SUPER, E,        exec, kitty zsh -lic "y; exec zsh -i"
-bind = SUPER, D,        exec, $HOME/.local/bin/public/menu/launch-kitty applications
-bind = SUPER, P,        exec, snitch $HOME/.local/bin/public/menu/launch-kitty
-bind = SUPER, O,        exec, qutebrowser
+bind = SUPER, Return,   exec, uwsm app -- $HOME/.local/bin/public/applications/kitty-eink
+bind = SUPER, S,        exec, uwsm app -- hyprshot -zm region -o $HOME/Pictures/screenshots
+bind = SUPER, E,        exec, uwsm app -- kitty zsh -lic "y; exec zsh -i"
+bind = SUPER, D,        exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty applications
+bind = SUPER, P,        exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty
+bind = SUPER, O,        exec, uwsm app -- qutebrowser
 
 # System
-bind = SUPER SHIFT, I,     exec, snitch $HOME/.local/bin/public/menu/launch-kitty wallpaper
+bind = SUPER SHIFT, I,     exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty wallpaper
 bind = SUPER, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
 # Example keybind in hyprland.conf
 # bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
 
-bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth-connect-xm6
+bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth/connect-xm6
 bindl = SUPER SHIFT, b,            exec, $HOME/.local/bin/public/hardware/set-keyboard-backlight
 bind  = SUPER SHIFT, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind  = SUPER SHIFT, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 bind  = SUPER SHIFT, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
-bind  = SUPER SHIFT, l,            exec, hyprlock
-bind  = SUPER SHIFT, N, exec, swaync-client -t -sw
-bind  = SUPER SHIFT, D, exec, swaync-client -d -sw
-bind  = SUPER SHIFT, S, exec, kitty --start-as=fullscreen --title btop sh -c 'btop'
+bind  = SUPER SHIFT, l,            exec, uwsm app -- hyprlock
+bind  = SUPER SHIFT, N,            exec, swaync-client -t -sw
+bind  = SUPER SHIFT, D,            exec, swaync-client -d -sw
+bind  = SUPER SHIFT, S,            exec, uwsm app -- kitty --start-as=fullscreen --title btop sh -c 'btop'
 
 # bindl =,switch:on:Lid Switch, exec, bash -c "hyprlock & sleep 0.5 && systemctl suspend-then-hibernate"
 
