--- a/home/.config/hypr/modules/nvidia.conf
+++ b/home/.config/hypr/modules/nvidia.conf
@@ -9,3 +9,7 @@
 # env = LIBVA_DRIVER_NAME,nvidia
 # env = GBM_BACKEND,nvidia-drm
 # env = XDG_MENU_PREFIX,plasma-
+
+opengl {
+  nvidia_anti_flicker = true
+}
