--- a/home/.config/hypr/modules/hosts/homepc.conf
+++ b/home/.config/hypr/modules/hosts/homepc.conf
@@ -14,8 +14,14 @@ workspace = 8, monitor:DP-1, persistent:true
 workspace = 9, monitor:DP-1, persistent:true
 workspace = 10, monitor:DP-1, persistent:true
 
-monitor = HDMI-A-1, 3200x2400@37, 0x720, 2.5
-monitor = DP-1, 3840x2160@60, 1280x0, 1.5, transform, 1
+# monitor = HDMI-A-1, 3200x2400@37, 0x720, 2.5
+# monitor = DP-1, 3840x2160@60, 1280x0, 1.5, transform, 1
+
+monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
+monitor = desc:LG Electronics LG HDR 4K 0x00013533, 3840x2160@60, 1280x0, 1.6
+
+# NEW: Firefox fix for nvidia
+env = MOZ_DISABLE_RDD_SANDBOX,1
 
 # exec = for i in {1..3}; do hyprctl dispatch moveworkspacetomonitor $i HDMI-A-1; done
 # exec = for i in {4..10}; do hyprctl dispatch moveworkspacetomonitor $i DP-1; done
