--- a/home/.config/hypr/modules/monitors.conf
+++ b/home/.config/hypr/modules/monitors.conf
@@ -4,11 +4,9 @@
 
 # https://wiki.hyprland.org/Configuring/Monitors/
 
-# monitor = eDP-1, 1920x1200@60, 0x0, 1.0
-# monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
-# monitor = desc:LG Electronics LG HDR 4K 0x00013533, 3840x2160@60, 1280x0, 1.6
-
 monitor = , preferred, auto, 1
+
+monitor = desc:DSC Paperlike13K 0x00003400, 3200x2400@37, 0x720, 2.0
 
 # monitor = DP-1, addreserved, 900, 500, 0, 0
 
