--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -141,6 +141,7 @@ windowrulev2 = tile, class:(.*kitty.*)
 windowrulev2 = tile, class:(.*main.*) # kitty
 windowrulev2 = tile, class:.*(im.py).*
 windowrulev2 = tile, class:(.*qutebrowser.*)
+windowrulev2 = tile, class:(.*ymuse.*)
 
 # Special workspaces
 
@@ -148,5 +149,6 @@ windowrulev2 = workspace special:watch, class:^(mpv|vlc)$
 windowrulev2 = fullscreen, class:^(mpv|vlc)$
 
 windowrulev2 = workspace special:controls, class:^(virt-manager|qemu|QEMU)$
+windowrulev2 = workspace special:controls, class:^(ymuse)$
 windowrulev2 = workspace special:controls, title:^(.*[Ww]indows.?10.*)$
 windowrulev2 = workspace special:controls, class:^(python3?|Python)
