use  depending on machine & git ignore host_settings.conf

--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -1,28 +1,28 @@
 # https://wiki.hyprland.org/Configuring/Binds
 
 # Applications
-bind = SUPER, Return,   exec, uwsm app -- $HOME/.local/bin/public/applications/kitty-eink
-bind = SUPER, S,        exec, uwsm app -- hyprshot -zm region -o $HOME/Pictures/screenshots
-bind = SUPER, E,        exec, uwsm app -- kitty zsh -lic "y; exec zsh -i"
-bind = SUPER, D,        exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty applications
-bind = SUPER, P,        exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty
-bind = SUPER, O,        exec, uwsm app -- qutebrowser
+bind = $main, Return,   exec, uwsm app -- $HOME/.local/bin/public/applications/kitty-eink
+bind = $main, S,        exec, uwsm app -- hyprshot -zm region -o $HOME/Pictures/screenshots
+bind = $main, E,        exec, uwsm app -- kitty zsh -lic "y; exec zsh -i"
+bind = $main, D,        exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty applications
+bind = $main, P,        exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty
+bind = $main, O,        exec, uwsm app -- qutebrowser
 
 # System
-bind = SUPER SHIFT, I,     exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty wallpaper
-bind = SUPER, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
+bind = $main SHIFT, I,     exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty wallpaper
+bind = $main, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
 # Example keybind in hyprland.conf
-# bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
+# bind = $main, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
 
-bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth/connect-xm6
-bindl = SUPER SHIFT, b,            exec, $HOME/.local/bin/public/hardware/set-keyboard-backlight
-bind  = SUPER SHIFT, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind  = SUPER SHIFT, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
-bind  = SUPER SHIFT, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
-bind  = SUPER SHIFT, l,            exec, uwsm app -- hyprlock
-bind  = SUPER SHIFT, N,            exec, swaync-client -t -sw
-bind  = SUPER SHIFT, D,            exec, swaync-client -d -sw
-bind  = SUPER SHIFT, S,            exec, uwsm app -- kitty --start-as=fullscreen --title btop sh -c 'btop'
+bind  = $main SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth/connect-xm6
+bindl = $main SHIFT, b,            exec, $HOME/.local/bin/public/hardware/set-keyboard-backlight
+bind  = $main SHIFT, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind  = $main SHIFT, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
+bind  = $main SHIFT, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
+bind  = $main SHIFT, l,            exec, uwsm app -- hyprlock
+bind  = $main SHIFT, N,            exec, swaync-client -t -sw
+bind  = $main SHIFT, D,            exec, swaync-client -d -sw
+bind  = $main SHIFT, S,            exec, uwsm app -- kitty --start-as=fullscreen --title btop sh -c 'btop'
 
 # bindl =,switch:on:Lid Switch, exec, bash -c "hyprlock & sleep 0.5 && systemctl suspend-then-hibernate"
 
@@ -39,80 +39,80 @@ bind = , F10, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = , F11, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 bind = , F12, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
 
-# bind = SUPER, K, shadeactivewindow, invert
+# bind = $main, K, shadeactivewindow, invert
 
 # Workspaces
 
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
+bind = $main, 1, workspace, 1
+bind = $main, 2, workspace, 2
+bind = $main, 3, workspace, 3
+bind = $main, 4, workspace, 4
+bind = $main, 5, workspace, 5
+bind = $main, 6, workspace, 6
+bind = $main, 7, workspace, 7
+bind = $main, 8, workspace, 8
+bind = $main, 9, workspace, 9
+bind = $main, 0, workspace, 10
 
-bind = SUPER SHIFT, 1, movetoworkspace, 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10
-bind = SUPER SHIFT, A, movetoworkspace, special:magic
-bind = SUPER SHIFT, W, movetoworkspace, special:watch
-bind = SUPER SHIFT, C, movetoworkspace, special:controls
+bind = $main SHIFT, 1, movetoworkspace, 1
+bind = $main SHIFT, 2, movetoworkspace, 2
+bind = $main SHIFT, 3, movetoworkspace, 3
+bind = $main SHIFT, 4, movetoworkspace, 4
+bind = $main SHIFT, 5, movetoworkspace, 5
+bind = $main SHIFT, 6, movetoworkspace, 6
+bind = $main SHIFT, 7, movetoworkspace, 7
+bind = $main SHIFT, 8, movetoworkspace, 8
+bind = $main SHIFT, 9, movetoworkspace, 9
+bind = $main SHIFT, 0, movetoworkspace, 10
+bind = $main SHIFT, A, movetoworkspace, special:magic
+bind = $main SHIFT, W, movetoworkspace, special:watch
+bind = $main SHIFT, C, movetoworkspace, special:controls
 
-bind = SUPER_CTRL_SHIFT, 1, movecurrentworkspacetomonitor, +1
-bind = SUPER_CTRL_SHIFT, 2, movecurrentworkspacetomonitor, -1
+bind = $main_CTRL_SHIFT, 1, movecurrentworkspacetomonitor, +1
+bind = $main_CTRL_SHIFT, 2, movecurrentworkspacetomonitor, -1
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = SUPER, mouse_down, workspace, e+1
-bind = SUPER, mouse_up, workspace, e-1
+bind = $main, mouse_down, workspace, e+1
+bind = $main, mouse_up, workspace, e-1
 
 # Special workspace
-bind = SUPER, A, togglespecialworkspace, magic
-bind = SUPER, W, togglespecialworkspace, watch
-bind = SUPER, C, togglespecialworkspace, controls
+bind = $main, A, togglespecialworkspace, magic
+bind = $main, W, togglespecialworkspace, watch
+bind = $main, C, togglespecialworkspace, controls
 
 # Navigation
-bind = SUPER, grave, workspace, previous
+bind = $main, grave, workspace, previous
 
-bind = SUPER, H, exec, $HOME/.config/hypr/scripts/focus-tiled
-bind = SUPER, L, exec, $HOME/.config/hypr/scripts/focus-tiled
-bind = SUPER, K, exec, $HOME/.config/hypr/scripts/focus-tiled
-bind = SUPER, J, exec, $HOME/.config/hypr/scripts/focus-tiled
+bind = $main, H, exec, $HOME/.config/hypr/scripts/focus-tiled
+bind = $main, L, exec, $HOME/.config/hypr/scripts/focus-tiled
+bind = $main, K, exec, $HOME/.config/hypr/scripts/focus-tiled
+bind = $main, J, exec, $HOME/.config/hypr/scripts/focus-tiled
 
-bind = SUPER, H, movefocus, l
-bind = SUPER, L, movefocus, r
-bind = SUPER, K, movefocus, u
-bind = SUPER, J, movefocus, d
+bind = $main, H, movefocus, l
+bind = $main, L, movefocus, r
+bind = $main, K, movefocus, u
+bind = $main, J, movefocus, d
 
-# bind = SUPER, Tab, bringactivetotop  # Bring it to the top
-bind = SUPER, Tab,       exec, $HOME/.config/hypr/scripts/cycle-float-windows
-bind = SUPER SHIFT, Tab, exec, $HOME/.config/hypr/scripts/cycle-float-windows prev
+# bind = $main, Tab, bringactivetotop  # Bring it to the top
+bind = $main, Tab,       exec, $HOME/.config/hypr/scripts/cycle-float-windows
+bind = $main SHIFT, Tab, exec, $HOME/.config/hypr/scripts/cycle-float-windows prev
 
 # Window operations
-bind = SUPER, F, fullscreen
-bind = SUPER SHIFT, F, fullscreenstate, 0 2
+bind = $main, F, fullscreen
+bind = $main SHIFT, F, fullscreenstate, 0 2
 
-bind = SUPER, V, togglefloating,
-bind = SUPER, Q, killactive,
+bind = $main, V, togglefloating,
+bind = $main, Q, killactive,
 
 # swap
-bind = SUPER CTRL, H, swapwindow, l
-bind = SUPER CTRL, L, swapwindow, r
-bind = SUPER CTRL, K, swapwindow, u
-bind = SUPER CTRL, J, swapwindow, d
-bind = SUPER CTRL, S, togglesplit
+bind = $main CTRL, H, swapwindow, l
+bind = $main CTRL, L, swapwindow, r
+bind = $main CTRL, K, swapwindow, u
+bind = $main CTRL, J, swapwindow, d
+bind = $main CTRL, S, togglesplit
 
 # pin
-bind = SUPER, W, pin
+bind = $main, W, pin
 
 # move
 binde = SHIFT ALT, H, moveactive, -100 0
@@ -121,11 +121,11 @@ binde = SHIFT ALT, K, moveactive, 0 -100
 binde = SHIFT ALT, J, moveactive, 0 100
 binde = SHIFT ALT, C, centerwindow
 
-bindm = SUPER, mouse:272, movewindow
-bindm = SUPER, mouse:273, resizewindow
+bindm = $main, mouse:272, movewindow
+bindm = $main, mouse:273, resizewindow
 
 # resize
-bind = SUPER, R, submap, R
+bind = $main, R, submap, R
 
 submap = R
 
@@ -141,17 +141,17 @@ bind = , q, submap, reset
 submap = reset
 
 # groups
-bind = SUPER, G, togglegroup
-bind = SUPER, N, changegroupactive, f
-bind = SUPER SHIFT, N, changegroupactive, b
+bind = $main, G, togglegroup
+bind = $main, N, changegroupactive, f
+bind = $main SHIFT, N, changegroupactive, b
 
-bind = SUPER SHIFT, H, moveintogroup, l
-bind = SUPER SHIFT, L, moveintogroup, r
-bind = SUPER SHIFT, K, moveintogroup, u
-bind = SUPER SHIFT, J, moveintogroup, d
+bind = $main SHIFT, H, moveintogroup, l
+bind = $main SHIFT, L, moveintogroup, r
+bind = $main SHIFT, K, moveintogroup, u
+bind = $main SHIFT, J, moveintogroup, d
 
 # global passthrough (Games, VMs)
-bind = SUPER, F10, submap, passthrough
+bind = $main, F10, submap, passthrough
 submap = passthrough
-bind = SUPER, F10, submap, reset
+bind = $main, F10, submap, reset
 submap = reset
