--- a/home/.config/hypr/modules/hosts/thinkpad.conf
+++ b/home/.config/hypr/modules/hosts/thinkpad.conf
@@ -1,3 +1,5 @@
+$main = ALT_L
+
 input {
   kb_model = "thinkpad"
   kb_options = "ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle,ctrl:nocaps,altwin:swap_lalt_lwin"
