fix input switch

--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -10,7 +10,8 @@ bind = $main, O,        exec, uwsm app -- qutebrowser
 
 # System
 bind = $main SHIFT, I,     exec, uwsm app -- $HOME/.local/bin/public/menu/launch-kitty wallpaper
-bind = $main, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
+# bind = $main, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
+bind = $main, SPACE, exec, hyprctl switchxkblayout all next; pkill -RTMIN+6 waybar
 # Example keybind in hyprland.conf
 # bind = $main, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
 
