--- a/home/.config/kanshi/config
+++ b/home/.config/kanshi/config
@@ -41,7 +41,7 @@ profile homepc_lg_rotated {
   exec $HOME/.local/bin/public/monitors/kanshi
 }
 
-profile homepc_lg_big {
+profile homepc_lg_rotated_big {
   output $LG enable transform 90 scale 2
 
   exec $HOME/.local/bin/public/monitors/kanshi
@@ -49,6 +49,12 @@ profile homepc_lg_big {
 
 profile homepc_lg {
   output $LG enable transform normal
+
+  exec $HOME/.local/bin/public/monitors/kanshi
+}
+
+profile homepc_lg_big {
+  output $LG enable transform normal scale 2
 
   exec $HOME/.local/bin/public/monitors/kanshi
 }
