dual GPU hyprland testing offload on games

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -76,3 +76,28 @@ misc {
 }
 
 windowrulev2 = plugin:chroma:ignore_scale, class:^(gamescope)$
+
+xwayland {
+  force_zero_scaling = true
+}
+
+# Ensure the mouse is actually grabbed by the window
+cursor {
+    no_warps = false
+}
+
+general {
+    allow_tearing = true
+}
+
+env = WLR_DRM_NO_ATOMIC,1
+
+# windowrulev2 = immediate, class:^(ArcRaiders|arcraiders|steam_app_2170360)$
+
+windowrulev2 = immediate, class:^(gamescope)$
+windowrulev2 = stayfocused, class:^(gamescope)$
+windowrulev2 = noshadow, class:^(gamescope)$
+windowrulev2 = nomaxsize, class:^(gamescope)$
+windowrulev2 = fullscreen, class:^(gamescope)$
+windowrulev2 = monitor 0, class:^(gamescope)$
+
