--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -75,8 +75,6 @@ misc {
   vrr = 0
 }
 
-windowrulev2 = plugin:chroma:ignore_scale, class:^(gamescope)$
-
 xwayland {
   force_zero_scaling = true
 }
@@ -93,11 +91,10 @@ general {
 env = WLR_DRM_NO_ATOMIC,1
 
 # windowrulev2 = immediate, class:^(ArcRaiders|arcraiders|steam_app_2170360)$
-
-windowrulev2 = immediate, class:^(gamescope)$
-windowrulev2 = stayfocused, class:^(gamescope)$
-windowrulev2 = noshadow, class:^(gamescope)$
-windowrulev2 = nomaxsize, class:^(gamescope)$
-windowrulev2 = fullscreen, class:^(gamescope)$
-windowrulev2 = monitor 0, class:^(gamescope)$
-
+# windowrulev2 = plugin:chroma:ignore_scale, class:^(gamescope)$
+# windowrulev2 = immediate, class:^(gamescope)$
+# windowrulev2 = stayfocused, class:^(gamescope)$
+# windowrulev2 = noshadow, class:^(gamescope)$
+# windowrulev2 = nomaxsize, class:^(gamescope)$
+# windowrulev2 = fullscreen, class:^(gamescope)$
+# windowrulev2 = monitor 0, class:^(gamescope)$
