temporary use fzm from source

--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -4,8 +4,8 @@
 bind = $main, Return,   exec, uwsm app -- $HOME/.local/bin/public/applications/kitty-eink
 bind = $main, S,        exec, uwsm app -- hyprshot -zm region -o $HOME/Pictures/screenshots
 bind = $main, E,        exec, uwsm app -- kitty zsh -lic "y; exec zsh -i"
-bind = $main, D,        exec, uwsm app -- $HOME/.local/bin/public/menu/bin/terminator-control applications
-bind = $main, P,        exec, uwsm app -- $HOME/.local/bin/public/menu/bin/terminator-control
+bind = $main, D,        exec, uwsm app -- /home/wh1le/Code/fzm/bin/fzm -o applications
+bind = $main, P,        exec, uwsm app -- /home/wh1le/Code/fzm/bin/fzm
 bind = $main, O,        exec, uwsm app -- qutebrowser
 
 # System
@@ -27,8 +27,8 @@ bind  = $main SHIFT, S,            exec, uwsm app -- kitty --start-as=fullscreen
 
 # bindl =,switch:on:Lid Switch, exec, bash -c "hyprlock & sleep 0.5 && systemctl suspend-then-hibernate"
 
-bind = , F1,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness down 3
-bind = , F2,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness up 3
+bind = , F1,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness down 7
+bind = , F2,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness up 7
 
 bind = , F5,  exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bind = , F6,  exec, hyprlock
